--- a/my.html
+++ b/my.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Responsive Landing Page</title>
+  <title>ABC College</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">MyBrand</div>
+    <div class="logo">ABC College</div>
     <nav id="navMenu">
       <a href="#home">Home</a>
-      <a href="#features">Features</a>
       <a href="#about">About</a>
+      <a href="#courses">Courses</a>
+      <a href="#admissions">Admissions</a>
       <a href="#contact">Contact</a>
     </nav>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
@@ -22,40 +23,59 @@
 
   <!-- Hero Section -->
   <section class="hero" id="home">
-    <h1>Build Modern Websites</h1>
-    <p>Create responsive and beautiful web pages easily.</p>
-    <button>Get Started</button>
-  </section>
-
-  <!-- Features -->
-  <section class="features" id="features">
-    <div class="card">
-      <h3>Responsive</h3>
-      <p>Works on all screen sizes.</p>
-    </div>
-    <div class="card">
-      <h3>Fast</h3>
-      <p>Optimized for performance.</p>
-    </div>
-    <div class="card">
-      <h3>Easy</h3>
-      <p>Simple and clean code.</p>
-    </div>
+    <h1>Welcome to ABC College</h1>
+    <p>Empowering Students for a Brighter Future</p>
+    <button>Apply Now</button>
   </section>
 
   <!-- About -->
   <section class="about" id="about">
-    <h2>About Us</h2>
+    <h2>About Our College</h2>
     <p>
-      We help beginners learn web development with practical examples.
+      ABC College is a premier institution offering quality education,
+      modern infrastructure, and experienced faculty to shape tomorrow’s leaders.
     </p>
   </section>
 
+  <!-- Courses -->
+  <section class="courses" id="courses">
+    <h2>Our Courses</h2>
+    <div class="course-container">
+      <div class="course-card">
+        <h3>B.Sc Computer Science</h3>
+        <p>Strong foundation in programming and technology.</p>
+      </div>
+      <div class="course-card">
+        <h3>B.Com</h3>
+        <p>Develop skills in finance, accounting, and management.</p>
+      </div>
+      <div class="course-card">
+        <h3>B.A English</h3>
+        <p>Enhance communication, literature, and critical thinking.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Admissions -->
+  <section class="admissions" id="admissions">
+    <h2>Admissions Open 2026</h2>
+    <p>Join us and build a successful academic career.</p>
+    <button>Download Prospectus</button>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@abccollege.edu</p>
+    <p>Phone: +91 98765 43210</p>
+  </section>
+
   <!-- Footer -->
-  <footer class="footer" id="contact">
-    <p>© 2026 MyBrand | All Rights Reserved</p>
+  <footer class="footer">
+    <p>© 2026 ABC College | All Rights Reserved</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
